--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,85 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto/Roboto-Regular.ttf) format('truetype');        
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto/Roboto-Bold.ttf) format('truetype');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto/Roboto-Medium.ttf) format('truetype');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto/Roboto-Thin.ttf) format('truetype');
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto/Roboto-Light.ttf) format('truetype');
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto/Roboto-Black.ttf) format('truetype');
+    font-weight: 900;
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat/Montserrat-Regular.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat/Montserrat-SemiBold.ttf) format('truetype');
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat/Montserrat-Bold.ttf) format('truetype');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat/Montserrat-Medium.ttf) format('truetype');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat/Montserrat-Thin.ttf) format('truetype');
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat/Montserrat-Light.ttf) format('truetype');
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat/Montserrat-ExtraBold.ttf) format('truetype');
+    font-weight: 800;
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat/Montserrat-Black.ttf) format('truetype');
+    font-weight: 900;
+}
+
 
 * {
     margin: 0;
@@ -87,8 +168,7 @@ header nav ul {
 .nav__close {
     position: absolute;
     top: 1rem;
-    right: 1.5rem;
-    font-size: 1.5rem;
+    right: 1.5rem;    
     cursor: pointer;
 }
 
@@ -137,6 +217,74 @@ h1 {
     padding-left: 1rem;   
 }
 
+.slides {
+    padding: 0;
+    width: 95vw;
+    height: 450px;
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    border-radius: 50px;
+    border: none;
+    overflow: hidden;
+    background-size: cover;
+}
+
+.slides * {
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
+
+.slides input {
+    display: none;
+}
+
+.slide-container {
+    display: block;
+}
+
+.slide {
+    top: 0;
+    opacity: 0;
+    width: 95vw;    
+    height: 470px;
+    display: block;
+    position: absolute;
+    transition: all .7s ease-in-out;
+
+}
+
+.slide p {
+    padding-bottom: 1rem;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-size: 1.3rem;
+    color: #8E5098;
+    text-align: center;    
+}
+
+.slide p strong {
+    font-weight: 800;
+    font-size: 1.3rem;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 50px;
+    border: none;
+}
+
+.slide.active {
+    opacity: 1;
+}
 
 .section-container {
     display: flex;
@@ -389,20 +537,20 @@ footer div nav ul {
 }
 
 /*=============== SCROLL UP ===============*/
+
 .scrollup {
     position: fixed;
     right: 1rem;
+    width: 3%;
+    height: auto;
     bottom: -50%;
     background-color: #ffff;
     box-shadow: 0 4px 12px hsla(19, 64%, 24%, .1);
     display: inline-flex;
     padding: .35rem;
-    border-radius: .25rem;
-    font-size: 1.1rem;
-    color: #673085;
+    border-radius: .25rem;    
     z-index: 10;
     transition: bottom .3s, transform .3s, background .4s;
-
 }
 
 .scrollup:hover {
@@ -416,15 +564,16 @@ footer div nav ul {
 }
 
 #avaliacao {
-    padding: 5rem 0 ;
+    padding: 5rem 0;
     background-color: #673085;
 }
 
 @media screen and (max-width: 950px) {
 
     body {
-        overflow-x: hidden;            
-    }
+        overflow-x: hidden;
+        max-width: 100vw;            
+    }    
 
     #menu {
         display: none;
@@ -436,14 +585,18 @@ footer div nav ul {
     }
 
     .nav__toggle {
-        display: block;
+        display: flex;
+        justify-content: flex-end;
         cursor: pointer;
-        padding-right: 1rem;
+        padding-right: 2rem;
     }
 
-    .nav__toggle i {
-        font-size: 2rem;
-        color: #673085;
+    .nav__toggle img {
+        width: 20%;
+    }
+    
+    .nav__close img {
+        width: 10%;
     }
 
     .show-menu {
@@ -454,9 +607,9 @@ footer div nav ul {
         display: none;
     }
 
-    header img {
+    #logo {
         width: 40%;
-        padding-left: 1rem;
+        padding-left: 2rem;
     }
 
     #home {
@@ -567,5 +720,9 @@ footer div nav ul {
 
     #suporte-texto {
         padding-top: 2.5rem;
+    }
+
+    .scrollup {
+        width: 10%;
     }
 }
