--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Roboto";
-    src: url(../fonts/Roboto/Roboto-Regular.ttf) format('truetype');        
+    src: url(../fonts/Roboto/Roboto-Regular.ttf) format('truetype');
 }
 
 @font-face {
@@ -110,12 +110,12 @@ strong {
 
 body {
     max-width: 100vw;
-    background-color: #ffff;    
+    background-color: #ffff;
 }
 
 header {
     display: flex;
-    justify-content: space-around;    
+    justify-content: space-around;
     align-items: center;
     position: relative;
     border-bottom: 1px solid;
@@ -123,13 +123,13 @@ header {
 }
 
 header img {
-    width: 20%;    
+    width: 20%;
 }
 
 header nav ul {
     display: flex;
     list-style: none;
-    gap: 2rem;    
+    gap: 2rem;
 }
 
 #zap-mob {
@@ -168,7 +168,7 @@ header nav ul {
 .nav__close {
     position: absolute;
     top: 1rem;
-    right: 1.5rem;    
+    right: 1.5rem;
     cursor: pointer;
 }
 
@@ -183,12 +183,14 @@ button {
     color: #ffff;
     padding: .7rem;
     font-weight: bold;
-    transition: .5s ease;    
+    transition: .5s ease;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 button:hover {
     cursor: pointer;
     background-color: #0af150;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 h1 {
@@ -199,24 +201,18 @@ h1 {
     padding-top: 5rem;
 }
 
-/* section {
-    height: 100vh;
-     width: 95vw;
-    max-width: 100vw;     
-} */
-
 #home {
     padding-top: 1.65rem;
-    padding-bottom: 10rem;    
+    padding-bottom: 10rem;
 }
 
 #zap button div {
-    display: flex;    
+    display: flex;
 }
 
 #zap button div img {
-    width: 25%; 
-    padding-left: 1rem;   
+    width: 30%;
+    padding-left: 1rem;
 }
 
 .container {
@@ -258,7 +254,7 @@ h1 {
 .slide {
     top: 0;
     opacity: 0;
-    width: 95vw;    
+    width: 95vw;
     height: 70vh;
     display: block;
     position: absolute;
@@ -268,7 +264,7 @@ h1 {
 #slide-h1 {
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
 }
 
 .slide p {
@@ -278,7 +274,7 @@ h1 {
     font-weight: 600;
     font-size: 1.3rem;
     color: #8E5098;
-    text-align: center;    
+    text-align: center;
 }
 
 .slide p strong {
@@ -302,14 +298,14 @@ h1 {
 .section-container {
     display: flex;
     flex-direction: column;
-    background-color:#673085;    
+    background-color: #673085;
     min-height: 100vh;
 }
 
 .section-container-esquerda {
     display: flex;
     flex-direction: column;
-    background-color: #92429F;    
+    background-color: #92429F;
     min-height: 100vh;
 }
 
@@ -319,7 +315,7 @@ h1 {
 }
 
 .esquerda {
-    width: 100%;    
+    width: 100%;
 }
 
 .section-conteudo {
@@ -328,7 +324,7 @@ h1 {
     align-items: flex-end;
     color: #ffff;
     padding-top: 5rem;
-    
+
 }
 
 .section-conteudo h2 {
@@ -345,7 +341,7 @@ h1 {
     flex-direction: column;
     align-items: flex-start;
     color: #ffff;
-    padding-top: 5rem;    
+    padding-top: 5rem;
 }
 
 .section-conteudo-esquerda h2 {
@@ -360,7 +356,7 @@ h1 {
 .section-texto {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 4rem;    
+    padding: 0 4rem;
     font-family: "Roboto", sans-serif;
     font-size: 1.3rem;
     font-weight: 400;
@@ -368,7 +364,7 @@ h1 {
 
 .section-texto-esquerda {
     display: grid;
-    grid-template-columns: 1fr 1fr;    
+    grid-template-columns: 1fr 1fr;
     padding: 0 4rem;
     padding: 0 4rem;
     font-family: "Roboto", sans-serif;
@@ -376,7 +372,7 @@ h1 {
     font-weight: 400;
 }
 
-.section-texto-esquerda div:first-child {    
+.section-texto-esquerda div:first-child {
     order: 2;
     padding-top: 6rem;
 }
@@ -386,18 +382,17 @@ h1 {
 }
 
 .section-foto {
-    width: 100%;    
-    height: 30.80rem; 
+    width: 100%;
+    height: 30.80rem;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
 #web-texto {
     display: flex;
-    flex-direction: column;    
-    gap: 4rem;    
-    padding-top: 6rem;    
+    flex-direction: column;
+    gap: 4rem;
+    padding-top: 6rem;
 }
 
 #web-texto div:last-child {
@@ -414,34 +409,46 @@ h1 {
     padding: 1rem 2rem;
     background-color: #92429F;
     transition: .5s ease;
-    font-size: 1rem;    
+    font-size: 1rem;
 }
 
 #portfolio:hover {
     background-color: #b869c4;
 }
 
+#web-imagem-container {
+    justify-content: flex-end;
+
+}
+
 #web-foto {
-    width: 100%;
+    width: 50%;
     height: auto;
-    padding-bottom: 2rem;
+}
+
+#camera-conteudo h2 {
+    padding-bottom: 1.2rem;
 }
 
 #camera-texto {
-    padding-top: 5rem;    
+    padding-top: 9.5rem;
 }
 
 #camera-texto p strong {
     color: #4a1b63;
 }
 
+#camera-imagem-container {
+    justify-content: flex-start;
+}
+
 #camera-foto {
-    width: 80%;
-    padding-bottom: 4rem;
+    width: 60%;
+    /*padding-bottom: 1.94rem;*/
 }
 
 #redes-texto {
-    padding-top: 7rem;
+    padding-top: 8rem;
 }
 
 #redes-imagem-container {
@@ -449,21 +456,24 @@ h1 {
 }
 
 #redes-foto {
-    width: 70%;
-    padding-bottom: 2rem;
+    width: 60%;
+}
+
+#suporte-imagem-container {
+    justify-content: flex-start;
 }
 
 #suporte-foto {
     width: 70%;
-    padding-bottom: 2rem;
 }
 
 #suporte {
     padding-bottom: 0;
+    border-bottom: 2px solid #ffff;
 }
 
 #suporte-texto {
-    padding-top: 6rem;
+    padding-top: 7.7rem;
 }
 
 #suporte-texto p strong {
@@ -486,10 +496,10 @@ footer div {
     text-align: center;
     gap: 1.5rem;
     font-family: "Montserrat", sans-serif;
-    color:#92429F;    
+    color: #92429F;
 }
 
-footer div:first-child {    
+footer div:first-child {
     padding-top: 4rem;
 }
 
@@ -510,7 +520,7 @@ footer div nav ul {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    
+
 }
 
 #social-link a {
@@ -525,14 +535,14 @@ footer div nav ul {
 #social-link a img {
     width: 100%;
     display: block;
-    height: auto;    
+    height: auto;
 }
 
 #social-link a:hover img {
     filter: brightness(0) saturate(100%) invert(71%) sepia(65%) saturate(3360%) hue-rotate(230deg) brightness(80%) contrast(89%);
 }
-    
-#copyright p {    
+
+#copyright p {
     font-size: .8rem;
 }
 
@@ -555,15 +565,13 @@ footer div nav ul {
 
 .scrollup {
     position: fixed;
-    right: 1rem;
+    right: 1.5rem;
     width: 3%;
     height: auto;
     bottom: -50%;
-    background-color: #ffff;
     box-shadow: 0 4px 12px hsla(19, 64%, 24%, .1);
     display: inline-flex;
-    padding: .35rem;
-    border-radius: .25rem;    
+    border-radius: .25rem;
     z-index: 10;
     transition: bottom .3s, transform .3s, background .4s;
 }
@@ -590,17 +598,12 @@ footer div nav ul {
 
 @media screen and (max-width: 950px) {
 
-    /* body {
-        overflow-x: hidden;
-        max-width: 100vw;            
-    }     */
-
     #menu {
         display: none;
     }
 
     .nav__menu {
-        width: 100%;            
+        width: 100%;
         max-width: 100%;
     }
 
@@ -614,7 +617,7 @@ footer div nav ul {
     .nav__toggle img {
         width: 20%;
     }
-    
+
     .nav__close img {
         width: 10%;
     }
@@ -634,18 +637,18 @@ footer div nav ul {
 
     #home {
         padding-top: 3rem;
-        padding-bottom: 5rem;        
+        padding-bottom: 5rem;
     }
 
-    #zap-container{
+    #zap-container {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding-top: 2rem;
+        padding-top: 1.5rem;
     }
 
     #zap-mob {
-        display: inline;        
+        display: inline;
     }
 
     #zap-mob button div {
@@ -653,13 +656,13 @@ footer div nav ul {
     }
 
     #zap-mob button div img {
-        width: 25%;
+        width: 30%;
         padding-left: 1rem;
-    }    
+    }
 
     .section-container,
     .section-container-esquerda {
-        max-width: 100%;        
+        max-width: 100%;
     }
 
     .section-conteudo,
@@ -689,6 +692,7 @@ footer div nav ul {
         padding: 2rem 0;
         width: 100%;
         max-width: 100%;
+        text-align: center;
     }
 
     .section-texto div:last-child,
@@ -699,11 +703,14 @@ footer div nav ul {
         order: 1;
     }
 
+    .section-foto {
+        justify-content: center;
+    }
+
     #web-conteudo {
         padding-bottom: 0;
     }
 
-    #web-foto,
     #camera-foto,
     #redes-foto,
     #suporte-foto {
@@ -719,6 +726,14 @@ footer div nav ul {
         padding: 0 1rem 5rem 1rem;
     }
 
+    #web-texto-container {
+        padding-top: 4.4rem;
+    }
+
+    #web-texto {
+        padding-top: 2.4rem;
+    }
+
     #web-texto div {
         min-width: 100%;
         display: flex;
@@ -727,20 +742,34 @@ footer div nav ul {
     #web-texto p {
         word-wrap: break-word;
         overflow-wrap: break-word;
-    }    
+    }
+
+    #camera-conteudo {
+        padding-bottom: 9rem;
+    }
 
     #camera-texto {
         padding: 2rem 1rem;
     }
 
-    #redes-imagem-container {
-        padding: .7rem 0 0 0;
+    #web-imagem-container,
+    #camera-imagem-container,
+    #redes-imagem-container,
+    #suporte-imagem-container {
         justify-content: center;
     }
 
+    #redes-conteudo {
+        padding-bottom: 9rem;
+    }
+
+    #redes-texto-container {
+        padding-top: 3rem;
+    }
+
     #redes-texto {
-        padding-top: 2rem;
-    }    
+        padding-top: 2.5rem;
+    }
 
     #suporte-texto {
         padding-top: 2.5rem;
@@ -750,14 +779,4 @@ footer div nav ul {
         width: 10%;
     }
 
-    /* @media screen and (min-width: 1700px) {
-        .section-conteudo {
-            padding: 15rem 0;
-        }
-
-        .section-conteudo-esquerda {
-            padding: 15rem 0;
-        }
-
-    } */
 }
